@@ -1,5 +1,16 @@
 2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03407] char GlobalKeymap -> unsigned char GlobalKeymap
+	* fm.h (GlobalKeymap): char->unsigned char
+		(EscKeymap): ditto
+		(EscBKeymap): ditto
+		(EscDKeymap): ditto
+		(PcKeymap): ditto
+	* keybind.c: ditto
+	* keybind_lynx.c: ditto
+
+2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03406]
 	* scripts/Makefile: add AUXBIN_DIR
 			update LIB_DIR, HELP_DIR
